[gd_scene load_steps=10 format=3 uid="uid://c28sw4vsxpqlj"]

[ext_resource type="Script" uid="uid://br1648l6eolgs" path="res://src/ui/copy/copy_button.gd" id="1_6lgf1"]
[ext_resource type="Material" uid="uid://bm2108ea6mlk5" path="res://assets/shaders/player_shadow_material.tres" id="2_d2r1c"]
[ext_resource type="Script" uid="uid://cjs56bula4a82" path="res://src/ui/mouse_pressed_listener.gd" id="2_h6mug"]
[ext_resource type="Texture2D" uid="uid://u2xov25lfo1c" path="res://assets/art/player/player_front.PNG" id="2_irau5"]
[ext_resource type="Texture2D" uid="uid://cmrjf4p5xyg8j" path="res://assets/art/player/left_hand_front.PNG" id="3_tkwsb"]
[ext_resource type="Texture2D" uid="uid://cw7irwvgn2fk" path="res://assets/art/player/right_hand_front.PNG" id="4_d2r1c"]
[ext_resource type="Material" uid="uid://brl4r63pus6xw" path="res://assets/shaders/hands_shadow_material.tres" id="4_jyban"]
[ext_resource type="Texture2D" uid="uid://chby0tlyn6ij0" path="res://assets/art/particles/fire_big.PNG" id="7_h1v4h"]
[ext_resource type="Texture2D" uid="uid://b77v8cjnykw2x" path="res://assets/art/loader.PNG" id="8_xiyof"]

[node name="CopyButton" type="MarginContainer"]
anchors_preset = -1
offset_right = 616.0
offset_bottom = 816.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_6lgf1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Container" type="CenterContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Player" type="TextureRect" parent="PanelContainer/MarginContainer/Container"]
material = ExtResource("2_d2r1c")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_irau5")
expand_mode = 1
stretch_mode = 5

[node name="LeftHand" type="TextureRect" parent="PanelContainer/MarginContainer/Container"]
material = ExtResource("4_jyban")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_tkwsb")
expand_mode = 1
stretch_mode = 5

[node name="RightHand" type="TextureRect" parent="PanelContainer/MarginContainer/Container"]
material = ExtResource("4_jyban")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("4_d2r1c")
expand_mode = 1
stretch_mode = 5

[node name="ActionRect" type="TextureRect" parent="PanelContainer/MarginContainer/Container"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("7_h1v4h")
expand_mode = 1

[node name="Loader" type="Sprite2D" parent="PanelContainer/MarginContainer/Container"]
modulate = Color(7.137, 7.137, 7.137, 0.518)
position = Vector2(49, 49)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_xiyof")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ClickListener" type="Node" parent="."]
script = ExtResource("2_h6mug")

[connection signal="mouse_pressed" from="ClickListener" to="." method="_on_click_listener_mouse_pressed"]
